# synth-ui

./: Cargo.toml  LICENSE  README.org
src/: main.rs  matrix.rs  model.rs  root.rs  view.rs  volume.rs
